--- a/styles/_nprogress.scss
+++ b/styles/_nprogress.scss
@@ -6,7 +6,7 @@
 }
 
 #nprogress .bar {
-  background: linear-gradient(to right, #7f00ff, #e100ff);
+  background: #f2f2f2;//linear-gradient(to right, #7f00ff, #e100ff);
   position: fixed;
   z-index: 1031;
   top: 0;
